
        Note that the name has to be 'index.html' for the exception
        view to work. (patch by Sidnei da Silva from Enfold,
        integration by Martijn Faassen (Startifact) for Infrae)

      - DateTime now uses pytz for time zone data. This means support
        for more time zones and up to date daylight saving time
        information.

    Bugs Fixed

      - Switch to branch of 'zope.testbrowser' external which suppresses
        over-the-wire tests.

      - Launchpad #164783: Indexes were migrated on initial creation of a
        ZODB.

      - Launchpad #151020: HTTP_CHAR_SET headers containing 'x-user-defined'
        caused a LookupError exception. Unknown encodings are from now on
        silently discarded.

      - Launchpad #143902: Fixed App.ImageFile to use a stream iterator to
        output the file. Avoid loading the file content when guessing the
        mimetype and only load the first 1024 bytes of the file when it cannot
        be guessed from the filename.

      - Changed PageTemplateFile not to load the file contents on Zope startup
        anymore but on first access instead. This brings them inline with the
        zope.pagetemplate version and speeds up Zope startup.

      - Launchpad #147201: treat container-class in zope.conf as a string,
        making it possible to use types from extra products directories.

      - Collector #2278: form ':record' objects did not implement enough
        of the mapping protocol.

      - Collector #2352: fix in OFS.Traversable

      - Collector #2346: username logging in FCGI crashed the server

      - Collector #2339: ZPT: fixed unicode issue when using the 'structure'
        directive

      - Collector #2332: SessionDataManger: don't swallow ConflictErrors

      - ZopePageTemplate's pt_edit did not recognize content type arguments
        which had a charset information included.

      - "version.txt" file was being written to the wrong place by the